--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "dr32teeth": "file:..",
     "express": "^4.18.2",
     "ioredis": "^5.8.1",
     "jsonwebtoken": "^9.0.2",
