--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.14",
     "axios": "^1.12.2",
+    "dr32teeth": "file:..",
     "lucide-react": "^0.545.0",
     "postcss-import": "^16.1.1",
     "react": "^19.1.1",
