--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.3",
     "morgan": "^1.10.1",
+    "mysql2": "^3.15.3",
     "nodemailer": "^7.0.10",
     "redis": "^5.9.0",
+    "sequelize": "^6.37.7",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
